# tinykernel-lab

./: .clang-format  CMakeLists.txt  Makefile  build.sh  compile_commands.json
.cache/clangd/index/: iic_ap3216c.c.1EE7C99944F6CAFF.idx  iic_ap3216c.mod.c.D901599C9F9ACAFD.idx  leddriver.c.A0FEDEB02DCA9E24.idx  leddriver.mod.c.7A8B86A2E816ACBF.idx  myctl.c.D688ADBE27DAF0A3.idx
app/: CMakeLists.txt  myctl.c  run_myctl.sh
cmake/toolchains/: Toolchain-arm-linux-gnueabihf.cmake
docs/: develop_blog.html  develop_blog.md
drivers/IIC_AP3216C/: .iic_ap3216c.ko.cmd  .iic_ap3216c.mod.o.cmd  .iic_ap3216c.o.cmd  CMakeLists.txt  Makefile  iic_ap3216c.c  iic_ap3216c.ko  iic_ap3216c.mod.c  modules.order
drivers/IIC_AP3216C/.tmp_versions/: iic_ap3216c.mod
drivers/INPUT_KEY/: .input_key.ko.cmd  .input_key.mod.o.cmd  .input_key.o.cmd  CMakeLists.txt  Makefile  compile_commands.json  input_key.c  input_key.ko  input_key.mod.c  modules.order
drivers/INPUT_KEY/.cache/clangd/index/: input_key.c.2B428C7530EE2587.idx  input_key.mod.c.0E5A9EC0F5CFA8D2.idx
drivers/INPUT_KEY/.tmp_versions/: input_key.mod
drivers/LED/: .leddriver.ko.cmd  .leddriver.mod.o.cmd  .leddriver.o.cmd  CMakeLists.txt  Makefile  leddriver.c  leddriver.ko  leddriver.mod.c  modules.order
drivers/LED/.tmp_versions/: leddriver.mod
